# Gaokao

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  query_admission_response.json  query_response.json  rag_answer_response.json
.github/workflows/: ci.yml
.kiro/specs/policy-rag/: design.md  requirements.md  tasks.md
.kiro/specs/query-catalog/: .config.kiro  design.md  requirements.md  tasks.md
apps/api/: .env.example  Dockerfile  README.md  pyproject.toml
apps/api/app/: __init__.py  config.py  dependencies.py  llm_clients.py  main.py  models.py  query_rewrite.py
apps/api/app/routers/: health.py  policy.py  query.py
apps/api/tests/: test_api.py  test_llm_clients.py  test_policy_api.py  test_query_rewrite.py
apps/web/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
apps/web/src/: api.ts  main.tsx  styles.css
data/: README.md
data/processed/: README.md
data/processed/guizhou/2025/: score_segments.csv  source_files.csv
data/processed/guizhou/2026/: source_files.csv
data/processed/master/: provinces.csv  schools.csv  source_files.csv
data/raw/: README.md
docs/: etl-output-contract.md  master-data-import.md  rag-import.md  roadmap.md  schema-decisions.md  schema.md  staging-import.md
models/: README.md
scripts/: import_rag_index.py  nl2sql_demo.py  query_catalog_e2e.py  validate_processed_csv.py
